# wind-ml-pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dvc.yaml  predict_example.py  pyproject.toml
.github/workflows/: ci.yaml
configs/: params.yaml
results/: model_comparison.yaml
scripts/: aggregate_hourly.py  generate_data.py
src/wind_ml_project/: alignment.py  data_generator.py  data_preprocessing.py  model_training.py  pipeline.py
src/wind_ml_project/data_sources/: __init__.py
src/wind_ml_project/data_sources/weather_providers/: __init__.py  open_meteo.py
tests/: conftest.py  test_pipeline.py
